<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ExtraIngredientsActivity">

    <TextView
        android:id="@+id/tvOrderDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textSize="32sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/select_extra_ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPizzaSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/select_ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrderDetails" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPizzaSize"
        app:layout_constraintVertical_bias="0.1">

        <CheckBox
            android:id="@+id/cbBroccoli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/broccoli" />

        <CheckBox
            android:id="@+id/cbPotato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/potato" />

        <CheckBox
            android:id="@+id/cbMushroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mushroom" />

        <CheckBox
            android:id="@+id/cbBlackOlives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/black_olives" />

        <CheckBox
            android:id="@+id/cbAnchovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anchovies" />

        <CheckBox
            android:id="@+id/cbEggplant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eggplant" />

        <CheckBox
            android:id="@+id/cbCapsicum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capsicum" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/submit"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>