<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderDetailsActivity">

  <TextView
      android:id="@+id/tvOrderDetails"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginTop="30dp"
      android:textSize="32sp"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:text="@string/order_details"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginStart="10dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvOrderDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="1">

      <TextView
          android:id="@+id/tvPizzaTitleHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/pizza_title"
          android:textColor="@color/black"
          android:textSize="22sp" />

      <TextView
          android:id="@+id/tvPizzaTitle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:textColor="@color/black"
          android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="1">

      <TextView
          android:id="@+id/tvPizzaSizeHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/pizza_size"
          android:textColor="@color/black"
          android:textSize="22sp" />

      <TextView
          android:id="@+id/tvPizzaSize"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:textColor="@color/black"
          android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="1">

      <TextView
          android:id="@+id/tvPizzaPriceHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/pizza_price"
          android:textColor="@color/black"
          android:textSize="22sp" />

      <TextView
          android:id="@+id/tvPizzaPrice"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:textColor="@color/black"
          android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="3">

      <TextView
          android:id="@+id/tvExtraIngredientsHeader"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/extra_ingredients"
          android:textColor="@color/black"
          android:textSize="22sp" />

      <TextView
          android:id="@+id/tvExtraIngredients"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:minHeight="120dp"
          android:layout_marginStart="5dp"
          android:textColor="@color/black"
          android:textSize="22sp" />
    </LinearLayout>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <Button
        android:id="@+id/btnChangePizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/change_pizza"
        android:backgroundTint="@color/black" />

    <Button
        android:id="@+id/btnChangeIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/change_extra_ingredients"
        android:backgroundTint="@color/black" />
  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>